alignment fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -257,7 +257,7 @@ margin-top: 50px;
     background-repeat: no-repeat;
     margin: 90px 230px 90px 230px;
     border-radius: 16px;
-    width: 1075px;
+    width: 1050px;
     height: 300px;
     overflow: hidden;
     background-size: cover;
